# serman

./: .env.sh  .gitignore  Cargo.toml  LICENSE  load_env.sh
src/: data.rs  entry.rs  error.rs  fd.rs  fd_flags.rs  ffi.rs  io.rs  lib.rs  lib_old.rs  messaging.rs  ref_count.rs  util.rs
tests/: io_tests.rs
